welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
DwarfCode:6: error: not found: value prendBisuit
		prendBisuit() ;      }
                ^